     "mouseover_image" and "selected_image" to tune mouse interface
   * Fixed bug #16219: Handled ToD areas in a LIFO way, so that it is possible
     to override them without first removing them
   * [effect] violate_maximum= (for use when increasing HP) takes a real boolean
     value now instead of taking any non-empty value as "true".
 * Miscellaneous and bug fixes:
   * Added help entry when new unit is created directly in the recall list
   * Defaulted log level to warning again
   * New option to auto-set delay shroud update on game start
   * better fix for bug 14765 now that string freeze is off
   * Added a way to rename local players at game creation
   * Fixed picking the proper locale, the problem only occurred on some
     systems
   * Added a way to compile wesnoth on windows by using CMake + MSVC9.
   * Added more command line arguments for starting a campaign+scenario
   * Added command line "preprocess" to preprocess a specified file/folder and
     output the result
   * Added command line "--data-dir" to explicitly override the data directory
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Fixed a bug in scoring of AI recall list. Patch by billynux.
   * Strip whitespace characters from .ign patterns (bug #15902)
   * Fixed wesnoth_addon_manager's support for .ign files (bug #15846)
   * Never allow uploading *.pbl files (case-insensitive) to the add-ons
     server from the regular game client.
   * When warning the player about installing add-ons with missing dependencies,
     make 'OK' and 'Cancel' work as expected (bug #15960)
   * Fixed tab completion not working in the new lobby (bug #14730)
   * Fixed compilation for g++ 4.5
   * Cleaned up the gui2 code at various places
   * Don't crash if a [story] [part] [if] misses [then] or [else] (bug #16028)
   * Fix a crash on OS X caused by passing invalid utf8 to pango (bug #16020)