@@ -628,6 +628,24 @@ void game_display::draw_movement_info(const map_location& loc)
 			return;
 		}
 	}
+	// When out-of-turn, it's still interesting to check out the terrain defs of the selected unit
+	else if (selectedHex_.valid() && loc == mouseoverHex_)
+	{
+		const unit_map::const_iterator selectedUnit = units_.find(selectedHex_);
+		const unit_map::const_iterator mouseoveredUnit = units_.find(mouseoverHex_);
+		if(selectedUnit != units_.end() && mouseoveredUnit == units_.end()) {
+			// Display the def% of this terrain
+			int def =  100 - selectedUnit->defense_modifier(get_map().get_terrain(loc));
+			std::stringstream def_text;
+			def_text << def << "%";
+
+			SDL_Color color = int_to_color(game_config::red_to_green(def, false));
+
+			// use small font
+			int def_font = 16;
+			draw_text_in_hex(loc, LAYER_MOVE_INFO, def_text.str(), def_font, color);
+		}
+	}
 
 	if (!reach_map_.empty()) {
 		reach_map::iterator reach = reach_map_.find(loc);
